<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dip"
    android:background="@mipmap/background">

    <TextView android:text="@string/beer_nameTap" android:id="@+id/star_rank_dialog_text"
        android:textSize="24dp" android:layout_marginTop="10dp"
        android:textColor="@color/grey"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RatingBar
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:progressTint="@color/grey"
        android:id="@+id/star_rank_dialog_ratingbar"
        android:layout_gravity="center"
        android:numStars="5" android:stepSize="1.0" android:rating="2"
        android:isIndicator="false"/>

    <Button android:id="@+id/star_rank_dialog_rateBtn"
        android:layout_height="wrap_content"
        android:text="@string/rank"  android:focusable="false"
        android:layout_margin="5dip" android:textColor="@color/grey"
        android:textSize="20dip" android:layout_width="fill_parent" />

    <Button android:id="@+id/star_rank_dialog_cancelBtn"
        android:layout_height="wrap_content"
        android:text="@string/cancel"  android:focusable="false"
        android:layout_margin="5dip" android:textColor="@color/grey"
        android:textSize="20dip" android:layout_width="fill_parent" />

</LinearLayout>