<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.foi.air.beermate.MainActivity">


    <ImageView
        app:srcCompat="@mipmap/beer"
        android:layout_alignParentStart="true"
        android:background="@mipmap/background"
        android:layout_height="240dp"
        android:padding="20dp"
        android:id="@+id/openBeers"
        android:onClick="openBeers"
        android:layout_width="160dp"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_height="240dp"
        app:srcCompat="@mipmap/settings"
        android:id="@+id/imageView13"
        android:background="@mipmap/background"
        android:layout_below="@+id/imageView12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:layout_width="160dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_height="240dp"
        app:srcCompat="@mipmap/mapa"
        android:id="@+id/imageView12"
        android:onClick="openMapsActivity"
        android:background="@mipmap/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        android:layout_width="160dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logout"
        android:id="@+id/imageView14"
        android:background="@mipmap/background"
        android:layout_alignTop="@+id/imageView13"
        android:layout_alignStart="@+id/imageView12"
        android:padding="20dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:text="@string/locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:id="@+id/textView2"
        android:fontFamily="Roboto"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/imageView12" />

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:id="@+id/textView3"
        android:fontFamily="Roboto"
        android:textSize="18sp"
        android:layout_marginStart="46dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/beers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:id="@+id/textView"
        android:fontFamily="Roboto"
        android:textSize="18sp"
        android:layout_above="@+id/imageView13"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginStart="10dp" />

    <TextView
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:fontFamily="Roboto"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginStart="10dp" />

</RelativeLayout>

